# whisper-cli

./: pyproject.toml
